--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+#APP_DEBUG=0
 APP_SECRET=04296456f2463847e23510546c7aab4d
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
