Mise en place de Encore pour nos CSS et JS

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,7 @@ security:
             form_login:
                 login_path: admin_account_login
                 check_path: admin_account_login
+                default_target_path: admin_dashboard
             
             logout:
                 path: admin_account_logout
