--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,33 @@
         "cocur/slugify": "^3.2",
         "fzaninotto/faker": "^1.8",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/asset": "4.1.*",
-        "symfony/console": "4.1.*",
-        "symfony/expression-language": "4.1.*",
+        "symfony/asset": "4.1.1",
+        "symfony/console": "4.1.1",
+        "symfony/expression-language": "4.1.1",
         "symfony/flex": "^1.1",
-        "symfony/form": "4.1.*",
-        "symfony/framework-bundle": "4.1.*",
+        "symfony/form": "4.1.1",
+        "symfony/framework-bundle": "4.1.1",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "4.1.*",
-        "symfony/security-bundle": "4.1.*",
+        "symfony/process": "4.1.1",
+        "symfony/security-bundle": "4.1.1",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.1.*",
-        "symfony/twig-bundle": "4.1.*",
-        "symfony/validator": "4.1.*",
-        "symfony/web-link": "4.1.*",
-        "symfony/yaml": "4.1.*"
+        "symfony/translation": "4.1.1",
+        "symfony/twig-bundle": "4.1.1",
+        "symfony/validator": "4.1.1",
+        "symfony/web-link": "4.1.1",
+        "symfony/webpack-encore-bundle": "^1.2",
+        "symfony/yaml": "4.1.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "4.1.*",
+        "symfony/dotenv": "4.1.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.1.*"
+        "symfony/web-server-bundle": "4.1.1"
     },
     "config": {
         "preferred-install": {
@@ -77,7 +78,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.1.*"
+            "require": "4.1.1"
         }
     }
 }
